Add moneta agent group chat

--- a/agent-orchstration-copywriter.ipynb
+++ b/agent-orchstration-copywriter.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
+    }
+   },
+   "source": [
+    "# Simple Copywriting Agent\n",
+    "\n",
+    "Demonstrates `AgentGroupChat` with a simple back-and-forth between a writer and an editor agent."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "eace0b53",
    "metadata": {
     "polyglot_notebook": {
@@ -45,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -70,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -137,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -172,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
